# surreal-simple-querybuilder

./: Cargo.toml  README.md  rustfmt.toml
examples/: 6-queries-and-params.rs  README.md
model-proc-macro/: Cargo.toml  README.md  make-parser.sh
model-proc-macro/src/: ast.rs  lib.rs  parser.lalrpop  parser.rs
model-proc-macro/src/ast/: field.rs  identifier.rs  model.rs  model_options.rs
model-proc-macro/src/querybuilder_object/: mod.rs  options.rs
src/: foreign_key.rs  lib.rs  node.rs  node_builder.rs  prelude.rs  querybuilder.rs  test.rs
src/foreign_key/: foreign_key.rs  into_key.rs  key_ser_control.rs  loaded_value.rs
src/model/: macros.rs  mod.rs  origin_holder.rs  relation_node.rs  schema_field.rs  serializer.rs
src/queries/: create.rs  delete.rs  impls.rs  mod.rs  select.rs  update.rs
src/types/: also.rs  and.rs  bind.rs  build.rs  cmp.rs  create.rs  delete.rs  equal.rs  ext.rs  fetch.rs  filter.rs  from.rs  greater.rs  limit.rs  lower.rs  mod.rs  on.rs  or.rs  order_by.rs  pagination.rs  plus_equal.rs  select.rs  set.rs  sql.rs  update.rs
tests/: Cargo.toml  foreign.rs  model.rs  query_params.rs  querybuilder.rs  surrealdb_client.rs
tests/src/: foreign.rs  main.rs  query.rs  query_params.rs  querybuilder.rs  surrealdb_client.rs
