[package]
name = "surreal-simple-querybuilder"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A query-building & utility crate for SurrealDB and its SQL querying language that aims to be simple"
readme = "README.md"
keywords = ["surrealdb", "querybuilder", "query", "builder"]
categories = ["database"]
repository = "https://github.com/Aelto/surreal-simple-querybuilder"

[workspace]
members = [
  "model-proc-macro"
]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }

surreal-simple-querybuilder-proc-macro = { path = "./model-proc-macro" }

[dev-dependencies]
serde_json = "1.0"
