[package]
name = "surreal-simple-querybuilder"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A query-building & utility crate for SurrealDB and its SQL querying language that aims to be simple"
readme = "README.md"
keywords = ["surrealdb", "querybuilder", "query", "builder"]
categories = ["database"]
repository = "https://github.com/Aelto/surreal-simple-querybuilder"

[workspace]
members = [
  "model-proc-macro"
]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.91"

surreal-simple-querybuilder-proc-macro = { path = "model-proc-macro", version = "0.2.0" }

[dev-dependencies]
serde_json = "1.0.91"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", features = ["kv-mem"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.152", features = ["serde_derive"] }

[[example]]
name = "querybuilder-basics"
path = "examples/0-querybuilder-basics.rs"