[package]
name = "surreal-simple-querybuilder"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "A query-building & utility crate for SurrealDB and its SQL querying language that aims to be simple"
readme = "README.md"
keywords = ["surrealdb", "querybuilder", "query", "builder"]
categories = ["database"]
repository = "https://github.com/Aelto/surreal-simple-querybuilder"

[workspace]
members = [
  "model-proc-macro"
]

[features]
default = ["querybuilder"]
querybuilder = []
queries = ["dep:flatten-json-object"]
model = ["dep:surreal-simple-querybuilder-proc-macro"]
foreign = []

all = ["querybuilder", "queries", "model", "foreign"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.91"
once_cell = "1.17.1"

surreal-simple-querybuilder-proc-macro = { path = "model-proc-macro", version = "0.8.0", optional = true }
flatten-json-object = { version ="0.6.1", optional = true }

[dev-dependencies]
serde_json = "1.0.91"
surrealdb = { version = "1.1.1", default-features = false, features = ["kv-mem"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.152", features = ["serde_derive"] }

[[example]]
name = "querybuilder-basics"
path = "examples/0-querybuilder-basics.rs"
required-features = ["querybuilder"]

[[example]]
name = "model-basics"
path = "examples/1-model-basics.rs"
required-features = ["querybuilder", "model"]

[[example]]
name = "model-foreign-nodes"
path = "examples/2-model-foreign-nodes.rs"
required-features = ["querybuilder", "model", "foreign"]

[[example]]
name = "model-edges"
path = "examples/3-model-edges.rs"
required-features = ["querybuilder", "model", "foreign"]

[[example]]
name = "querybuilder-conditional"
path = "examples/4-querybuilder-conditional.rs"
required-features = ["querybuilder", "model"]

[[example]]
name = "model-serializer"
path = "examples/5-model-serializer.rs"
required-features = ["querybuilder", "model"]

[[example]]
name = "queries-and-params"
path = "examples/6-queries-and-params.rs"
required-features = ["model", "queries"]